--- a/templates/credentials_create.html
+++ b/templates/credentials_create.html
@@ -11,7 +11,7 @@
                         <p>
                         {% if field.name == 'temp_password' and generated_password %}
                             {{ field.label_tag }} <br>
-                            {{ field.value|default:generated_password }}
+                            <input type="password" name="{{ field.name }}" value="{{ field.value|default:generated_password }}">
                         {% else %}
                             {{ field.label_tag }} <br>
                             {{ field }}
