--- a/templates/credentials_list.html
+++ b/templates/credentials_list.html
@@ -5,14 +5,29 @@
         <div class="w3-center">
             <div class="w3-card w3-white w3-hover-shadow">
                 <h3 class="w3-light-grey w3-xlarge w3-padding-48">My Credentials</h3>
+
+                <form method="get" class="w3-container">
+                    <div class="w3-section" style="display: flex; align-items: center;">
+                        <label style="margin-right: 10px;"> <strong>Select Category</strong></label>
+                        <select name="category" class="w3-select w3-border" style="width:200px; margin-right: 10px;">
+                            <option value="">All</option>
+                            {% for category in categories %}
+                                <option value="{{ category.id }}">{{ category.name }}</option>
+                            {% endfor %}
+                        </select>
+                        <input type="submit" value="Filter" class="w3-button w3-green w3-padding-small">
+                    </div>
+                </form>
+
+
                 <table class="w3-table w3-striped">
                     <thead>
-                        <tr>
-                            <th>Username</th>
-                            <th>Password</th>
-                            <th>Comment</th>
-                            <th>Actions</th>
-                        </tr>
+                    <tr>
+                        <th>Username</th>
+                        <th>Password</th>
+                        <th>Comment</th>
+                        <th>Actions</th>
+                    </tr>
                     </thead>
                     <tbody>
                     {% for credential in credentials %}
@@ -29,7 +44,9 @@
                     </tbody>
                 </table>
                 <div style="text-align: center; margin-top: 20px;">
-                    <a href="{% url 'create credentials' %}" class="w3-button w3-green">Create New</a>
+                    <a href="{% url 'create credentials' %}" class="w3-button w3-green" style="margin-right: 20px;">Create
+                        Credential</a>
+                    <a href="{% url 'create category' %}" class="w3-button w3-green">Create Category</a>
                 </div>
             </div>
         </div>
