--- a/templates/index.html
+++ b/templates/index.html
@@ -38,28 +38,29 @@
 
 <!-- Password Generator -->
     <div class="w3-container w3-light-grey" style="padding:128px 16px" id="password">
-        <div class="w3-row-padding">
-            <div class="w3-col m6">
-                <h3>Password Generator</h3>
-                <p>Create your safe password.<br></p>
+    <div class="w3-row-padding">
+        <div class="w3-col m6">
+            <h3 style="font-family: Arial, sans-serif; color: #333;">Password Generator</h3>
+            <p style="font-family: Arial, sans-serif; color: #666;">Create your safe password.<br></p>
 
-                <form method="POST" action="{% url 'password generator' %}">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    {% if password %}
-                        <p>Your generated password: {{ password }}</p>
-                    {% endif %}
-                    <input type="submit" name="generate" value="Generate" class="w3-button w3-black">
-                    <input type="submit" name="save" value="Save" class="w3-button w3-black">
-                </form>
+            <form method="POST" action="{% url 'password generator' %}" style="margin-top: 20px;">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <p>Your generated password: {% if password %} {{ password }}</p>
+                {% endif %}
+                <div style="margin-top: 30px;">
+                <input type="submit" name="generate" value="Generate" class="w3-button w3-black" style="margin-right: 10px;">
+                <input type="submit" name="save" value="Save" class="w3-button w3-black">
+                </div>
+            </form>
 
-            </div>
-            <div class="w3-col m6">
-                <img class="w3-image w3-round-large" src="https://i0.wp.com/whatismyip.network/wp-content/uploads/2019/09/Strong-Password-Generator.jpg?fit=1280%2C721&ssl=1"
-                     alt="Buildings" width="700" height="394">
-            </div>
+        </div>
+        <div class="w3-col m6">
+            <img class="w3-image w3-round-large" src="https://i0.wp.com/whatismyip.network/wp-content/uploads/2019/09/Strong-Password-Generator.jpg?fit=1280%2C721&ssl=1"
+                 alt="Buildings" width="700" height="394" style="border-radius: 15px;">
         </div>
     </div>
+</div>
 
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
@@ -69,7 +70,7 @@
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: info.passkeeper@gmail.com</p>
     <br>
     <!-- Image of location/map -->
-    <img src="https://nethunt.com/blog/content/images/2020/06/How-to-Choose-Professional-Email-Address-1.jpg" class="w3-image w3-greyscale" style="width:70%;margin-top:38px">
+    <img src="https://nethunt.com/blog/content/images/2020/06/How-to-Choose-Professional-Email-Address-1.jpg" class="w3-image w3-greyscale" style="width:50%;margin-top:10px">
   </div>
 </div>
 
