--- a/templates/credentials_list.html
+++ b/templates/credentials_list.html
@@ -46,7 +46,7 @@
                 <div style="text-align: center; margin-top: 20px;">
                     <a href="{% url 'create credentials' %}" class="w3-button w3-green" style="margin-right: 20px;">Create
                         Credential</a>
-                    <a href="{% url 'create category' %}" class="w3-button w3-green">Create Category</a>
+                    <a href="{% url 'list categories' %}" class="w3-button w3-green">View Categories</a>
                 </div>
             </div>
         </div>
