--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -31,14 +31,17 @@
 
                         <div class="form-field">
                             {{ form.password1.label_tag }}<br>{{ form.password1 }}
+                            {{ form.password1.errors }}
                         </div>
 
                         <div class="form-field">
                             {{ form.password2.label_tag }}<br>{{ form.password2 }}
+                            {{ form.password2.errors }}
                         </div>
                     {% else %}
                         <div class="form-field">
                             {{ form.password.label_tag }}<br>{{ form.password }}
+                            {{ form.password.errors }}
                         </div>
                     {% endif %}
                     <br>
