--- a/templates/base.html
+++ b/templates/base.html
@@ -128,7 +128,7 @@
         <a href="{% url 'index' %}" class="w3-bar-item w3-button w3-wide">PassKeeper</a>
         <!-- Right-sided navbar links -->
         <div class="w3-right w3-hide-small">
-            <a href="{% url 'password generator' %}" class="w3-bar-item w3-button"><i class="fa fa-cogs"></i> PASSWORD GENERATOR</a>
+            <a href="{% url 'password generator' %}#password" class="w3-bar-item w3-button"><i class="fa fa-cogs"></i> PASSWORD GENERATOR</a>
             {% if request.user.is_authenticated %}
             <div class="w3-dropdown-hover">
                 <button class="w3-button" onclick="window.location.href='{% url 'details profile' pk=request.user.id %}';"><i class="fa fa-user"></i> PROFILE</button>
