--- a/templates/base.html
+++ b/templates/base.html
@@ -133,7 +133,7 @@
             <div class="w3-dropdown-hover">
                 <button class="w3-button" onclick="window.location.href='{% url 'details profile' pk=request.user.id %}';"><i class="fa fa-user"></i> PROFILE</button>
                 <div class="w3-dropdown-content w3-bar-block w3-border">
-                    <a href="{% url 'logout user' %}" class="w3-bar-item w3-button">Logout</a>
+                    <a href="{% url 'logout user' %}" class="w3-bar-item w3-button"><i class="fa fa-sign-out"></i> Logout</a>
                 </div>
             </div>
              <a href="{% url 'list credentials' %}" class="w3-bar-item w3-button"><i class="fa fa-folder-open"></i> MY CREDENTIALS</a>
